--- a/public/style.css
+++ b/public/style.css
@@ -89,3 +89,39 @@ header {
     color: #162938;
     transition: 0.3s ease-in-out;
 }
+
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.wrapper .form-box {
+    width: 100%;
+    padding: 40px;
+}
+
+.form-box h2 {
+    font-size: 2em;
+    color: #162938;
+    text-align: center;
+
+}
+
+.input-box {
+    position: relative;
+    width: 100%;
+    margin-top: 50px;
+    border-bottom: 2px solid #162938;
+    
+
+}
