--- a/public/style.css
+++ b/public/style.css
@@ -103,12 +103,40 @@ header {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    transition: height .2s ease;
+
+}
+.wrapper .active {
+    height: 520px;
 
 }
 
 .wrapper .form-box {
     width: 100%;
     padding: 40px;
+}
+
+.wrapper .form-box.login {
+    transition: transform .18s ease;
+    transform: translateX(0px);
+    
+
+}
+
+.wrapper .active .form-box.login {
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper .form-box.register {
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper .active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0px);
 }
 
 .wrapper .icon-close {
@@ -157,12 +185,6 @@ header {
 
 }
 
-.input-box input:focus ~ label,
-.input-box input:valid ~ label {
-    top: -5px;
-    
-}
-
 .input-box input {
     width: 100%;
     height: 100%;
@@ -182,8 +204,16 @@ header {
     right: 8px;
     font-size: 1.2em;
     color: #162938;
-    line-height: 57px;
+    line-height: 5px;
 }
+
+
+.input-box input:focus ~ label,
+.input-box input:valid ~ label {
+    top: -5px;
+    
+}
+
 
 .remember-forget {
     font-size: .9em;
