moved files back into public folder and created assets folder

--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('Coffee\ and\ Clean\ With\ Me.jpg') no-repeat;
+    background: url('./assets/Coffee\ and\ Clean\ with\ me.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 
